--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
 =======
   "name": "jashn-e-rekhta-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Jashn-e-Rekhta",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
